objects/Payable_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>Payable_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Batch_Payment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The batch payment where this invoice was paid.</inlineHelpText>
        <label>Batch Payment</label>
        <referenceTo>Batch_Payment__c</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>Payable_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <inlineHelpText>Used for duplicate record prevention</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Payable Invoices</relationshipLabel>
        <relationshipName>Payable_Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The customer to which this invoice relates</inlineHelpText>
        <label>Related Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Payable Invoices (Related Customer)</relationshipLabel>
        <relationshipName>Payable_Invoices_Customers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Payment</fullName>
                    <default>true</default>
                    <label>Pending Payment</label>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payable Invoice</label>
    <listViews>
        <fullName>All_Batched_Invoices</fullName>
        <columns>NAME</columns>
        <columns>Batch_Payment__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Payment__c</field>
            <operation>contains</operation>
            <value>bp-0047</value>
        </filters>
        <label>All Batched Invoices</label>
    </listViews>
    <listViews>
        <fullName>Due_Last_Month</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Batch_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Payment__c</field>
            <operation>equals</operation>
            <value>BP-0041</value>
        </filters>
        <label>Due Last Month</label>
    </listViews>
    <listViews>
        <fullName>Dupes</fullName>
        <columns>NAME</columns>
        <columns>Batch_Payment__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>External_Id__c</field>
            <operation>equals</operation>
        </filters>
        <label>Dupes</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Pending_Payment</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Batch_Payment__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Payment</value>
        </filters>
        <label>Pending Payment</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Select_BP_Change_the_status</fullName>
        <columns>NAME</columns>
        <columns>Batch_Payment__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Batch_Payment__c</field>
            <operation>equals</operation>
            <value>BP-0047</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Payment</value>
        </filters>
        <label>Select BP_Change the status</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>To_be_paid_now_CHANGE_BATCH</fullName>
        <columns>NAME</columns>
        <columns>Batch_Payment__c</columns>
        <columns>Account__c</columns>
        <columns>Status__c</columns>
        <columns>Related_Customer__c</columns>
        <columns>Invoice_Amount__c</columns>
        <columns>Invoice_Date__c</columns>
        <columns>Invoice_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Pending Payment</value>
        </filters>
        <filters>
            <field>Batch_Payment__c</field>
            <operation>equals</operation>
            <value>BP-043</value>
        </filters>
        <label>To be paid now (change batch)</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payable Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payable Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>